--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@pinecone-database/pinecone": "^4.0.0",
+    "@the-convocation/twitter-scraper": "^0.14.1",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "openai": "^4.77.3"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
