--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "@the-convocation/twitter-scraper": "^0.14.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "openai": "^4.77.3"
+    "openai": "^4.77.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
