--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@ai-sdk/groq": "^1.0.11",
+    "@ai-sdk/xai": "^1.0.17",
     "@pinecone-database/pinecone": "^4.0.0",
     "@the-convocation/twitter-scraper": "^0.14.1",
+    "ai": "^4.0.33",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "openai": "^4.77.3",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
