add json types and remove ts config checks for libs

--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,6 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@ai-sdk/groq": "^1.0.11",
     "@ai-sdk/xai": "^1.0.17",
     "@pinecone-database/pinecone": "^4.0.0",
     "@the-convocation/twitter-scraper": "^0.14.1",
@@ -26,6 +25,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/json-schema": "^7.0.15",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^4.9.0"
   },
