--- a/firebase.json
+++ b/firebase.json
@@ -37,5 +37,11 @@
     "storage": {
       "port": 9199
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
+  },
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
   }
 }
