--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,11 @@
   "main": "lib/index.js",
   "dependencies": {
     "@ai-sdk/xai": "^1.0.17",
+    "@distube/ytdl-core": "^4.15.8",
     "@pinecone-database/pinecone": "^4.0.0",
     "@the-convocation/twitter-scraper": "^0.14.1",
     "ai": "^4.0.33",
+    "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "openai": "^4.77.3",
