--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@ai-sdk/xai": "^1.0.17",
+    "@google-cloud/speech": "^6.7.0",
     "@pinecone-database/pinecone": "^4.0.0",
     "@the-convocation/twitter-scraper": "^0.14.1",
     "ai": "^4.0.33",
