--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "@pinecone-database/pinecone": "^4.0.0",
     "@the-convocation/twitter-scraper": "^0.14.1",
     "ai": "^4.0.33",
+    "assemblyai": "^4.8.0",
     "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
